--- a/client/src/components/layout/PageContent/PageContent.scss
+++ b/client/src/components/layout/PageContent/PageContent.scss
@@ -18,7 +18,8 @@
     &.normalPage {
         @include displayGrid;
         grid-template-columns: 2.5fr 9.5fr;
-        padding-bottom: $page_content_padding_content_top_bottom;
+        padding-bottom: $page_content_padding_content_top;
+        padding-bottom: 260px;
 
         .sideBar {
             grid-column: 1 / 2;
@@ -27,8 +28,8 @@
         .contentWrapper {
             // padding-right: $page_padding_left_right;
             // padding-right: $page_padding_left_right;
-            // padding-top: $page_content_padding_content_top_bottom;
-            padding: $page_content_padding_content_top_bottom $page_padding_left_right;
+            // padding-top: $page_content_padding_content_top;
+            padding: $page_content_padding_content_top $page_padding_left_right;
         }
     }
 }
